# monitor_whatsapp_max

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  constants.py  formatting.py  handlers.py  keyword_service.py  main.py  menu.py  message_sender.py  notifier.py  states.py
database/: alembic.ini  requirements.txt
database/alembic/: env.py  script.py.mako
database/alembic/versions/: 0001_init.py  0002_user_state.py  0003_messages_max.py
scripts/: db_metrics.sh
shared/: __init__.py  config.py  constants.py  db.py  health.py  logging_config.py  models.py  retry.py
shared/repositories/: __init__.py  keywords.py  messages.py  user_state.py
worker/: __init__.py  buffer.py  main.py  max_client.py  poller.py  wappi_client.py  whapi_client.py
